==> miha-labs/ML_Brushless_RL78G14/ML_made/Interface/ML_UART.c <==
/* -----------------------------------------------------------------------------
	include
----------------------------------------------------------------------------- */
#include	"ML_UART.h"
#include	"../../src/r_cg_serial.h"

/* -----------------------------------------------------------------------------
	Local Macro
----------------------------------------------------------------------------- */
#define	RX_SIZE	3
#define	TX_SIZE	3


/* -----------------------------------------------------------------------------
	Local Variable
----------------------------------------------------------------------------- */
static	uint8_t	rx_buf[RX_SIZE] = {0};
static	bool		is_rx_cmp = false;


/* -----------------------------------------------------------------------------
	local Structure
----------------------------------------------------------------------------- */



/* -----------------------------------------------------------------------------
	local function
----------------------------------------------------------------------------- */



/* -----------------------------------------------------------------------------
	private function
----------------------------------------------------------------------------- */
static void enableReceiveInterrupt(void)
{
	R_UART3_Receive(rx_buf, RX_SIZE);
}



/* -----------------------------------------------------------------------------
	public function
----------------------------------------------------------------------------- */
void UART_Startup(void)
{
	R_SAU1_Create();
	R_UART3_Start();

	enableReceiveInterrupt();
}


void UART_Transmit(uint8_t *buf, uint16_t size)
{
	R_UART3_Send(buf, size);
}


bool UART_Receive_3byte(uint8_t *buf)
{
	if(!is_rx_cmp) return false;
	is_rx_cmp = false;
	
	for (uint8_t i = 0; i < RX_SIZE; i++)
	{
		buf[i] = rx_buf[i];
	}
	
	enableReceiveInterrupt();
	
	return true;
}


void UART_CompReceiveProcess(void)
{
	is_rx_cmp = true;
}
